# docs/docsv1/swagger.yaml
@@ -646,10 +646,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/web.ErrorResponse'
-        "404":
-          description: Service not found
-          schema:
-            $ref: '#/definitions/web.ErrorResponse'
         "500":
           description: Internal server error
           schema:
